--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,7 +2,7 @@
 body, html {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.6;
-  padding: 0 1rem 0 1rem;
+  padding: 0 .2rem 0 .2rem;
   font-size: 100%;
   overflow-x: hidden;
 }
