--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,36 @@ footer p {
   font-size: .75rem;
 }
 
+#fish-header {
+  display: flex;
+  align-items: center;
+}
+
+#fish-header > h2 {
+  margin-right: 1rem;
+}
+
+#down-triangle {
+  display: none;
+}
+
+
+#show-fish-btn:hover  {
+  cursor: pointer;
+}
+
+#show-fish-btn {
+  display: block;
+  border: none;
+  background: inherit;
+}
+
+#fish-pic-gallery {
+  display: none;
+}
+
+
+
 @media screen and (min-width: 1024px) {
   body {
     max-width: 50vw;
